# TrafficSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  configure.sh  one_car_env.h5  requirements.txt
ai_training/: cant_fail_one_car_env.py  one_car_agent.py  simple_one_car_env.py
app/: CMakeLists.txt
app/include/: car.h
app/src/: car.cpp  main.cpp
env_api/: setup.py
env_api/ai_training/: one_car_env.py
env_api/src/: env_api.cpp  env_api.h  main.cpp
env_api/tests/: test_environment.py
include/: car.h  car_actions.h  constants.h  game_world.h  kappa.h  polar_vec2d.h  rectangle.h  rendering.h  road_system.h  roadway.h  texture_manager.h  traffic_env.h  vec2d.h
python/: __main__.py  a2c.py  agent.py  cant_fail_one_car_env.py  double_dqn.py  one_car_env.py  openai_gym.py  simple_one_car_env.py
python_agent/: .gitignore  CMakeLists.txt  agent.h  agent.i  setup.py
python_agent/ai_training/: one_car_env.py
python_agent/src/: agent.cpp  agent.h  main.cpp
python_agent/tests/: test_environment.py
src/: car.cpp  car_actions.cpp  game_world.cpp  main.cpp  main_export_env_images.cpp  main_manual_driving.cpp  rectangle.cpp  rendering.cpp  road_system.cpp  roadway.cpp  texture_manager.cpp  traffic_env.cpp
tests/: CMakeLists.txt  filled_square_piece_test.cpp  straight_road_test.cpp  vec2d_test.cpp
